--- a/Moodle3/app/src/main/res/layout/fragment_information_client.xml
+++ b/Moodle3/app/src/main/res/layout/fragment_information_client.xml
@@ -77,7 +77,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Full name: Hiệu Quốc Chính"
+                    android:text="@string/if_name"
                     android:layout_margin="15dp"
                     android:textSize="17dp"
                     />
